--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-help": "^1.6.1",
+    "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-watch": "^4.3.11"
+    "gulp-uglify": "^2.1.2",
+    "gulp-watch": "^4.3.11",
+    "moment": "^2.18.1"
   }
 }
