--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^2.4.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "jwt-simple": "^0.5.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
