--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "angular-youtube-api-factory": "^0.6.2",
-    "angular-youtube-mb": "^1.3.1"
+    "angular-youtube-mb": "^1.3.1",
+    "ng-lodash": "^0.5.0",
+    "ng-youtube-embed": "^1.7.10"
   }
 }
