--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "chai": "^4.0.1",
+    "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-help": "^1.6.1",
@@ -27,6 +29,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11",
+    "mocha": "^3.4.2",
     "moment": "^2.18.1"
   }
 }
