--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,10 @@
     "angular-youtube-api-factory": "^0.6.2",
     "angular-youtube-mb": "^1.3.1",
     "ng-lodash": "^0.5.0",
-    "ng-youtube-embed": "^1.7.10"
+    "ng-youtube-embed": "^1.7.10",
+    "angular-d3-word-cloud": "^0.4.0",
+    "d3": "^4.9.1",
+    "d3-cloud": "^1.2.4",
+    "tiny-angular-wordcloud": "*"
   }
 }
