--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-ui-bootstrap": "^2.5.0",
     "async": "^2.4.0",
     "body-parser": "~1.15.2",
+    "cheerio": "^1.0.0-rc.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
@@ -18,6 +19,7 @@
     "moment": "^2.18.1",
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11",
     "mocha": "^3.4.2",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "nodemon": "^1.11.0"
   }
 }
